Inicio da Página Fale Conosco e Utilização de uma Técnica do Estilo Modal

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -42,13 +42,14 @@ span#pesquisa {
     font-weight: 200;
     margin-right: 5px;
 }
-input {
+
+input.pesquisa {
     border: 1px solid #999;
     box-shadow: 2px 2px 2px rgba(0,0,0,.25) inset;
     padding: 2px 5px;
 }
 
-input:focus {
+input.pesquisa:focus {
     border-color: #35861B;
     box-shadow: 0 0 5px #35861B,2px 2px 2px rgba(0,0,0,0.25) inset; /*Para permanecer a sombra interna*/
     outline: none;
@@ -67,9 +68,7 @@ nav#menu ul {
     top: 520px;
     /*left: 130px;*/
     margin-left: -35px;
-    z-index: 2;    
-
-
+   
 }
 
 nav#menu  li{    
@@ -171,7 +170,7 @@ header#cabecalho img#icone {
 #slide img{
     position: absolute;
     width: 100%;    
-    z-index: 2;
+    /*z-index: 2;*/
     display: none; /*Por que?*/
     left: 0;
 
@@ -192,8 +191,7 @@ h1 a:hover {
 /*------------------------Section----------------------------------------------*/
 section {
     float: left;        
-    width:500px;
-    height: 400px;
+    width:600px;   
     margin-top: 30px;
     background: #7E9F19;
     border-bottom-right-radius: 50px;
@@ -295,21 +293,38 @@ aside {
     background-color: blueviolet;
     border: 2px solid #C9BC8F;
     top: 20px;
-    float: right;
-    height: 80px;
+    float: right;    
     margin: 10px;
-    width: 400px;
+    margin-right: 1px;
+    width: 300px;
     position: relative;
-
+    padding: 10px;
 }
 
-aside h3 {
-    font-size: 14px;
-    margin-top: 0;
+aside h3 {    
+    margin: 0;
 }
 
 aside ol{
     font-size: 12px;
+}
+
+
+/*----------------------------------Fale Conosco-----------------------------*/
+
+
+/*----------------------------------Classe ClearFix-----------------------------*/
+.clearfix::before, .clearfix::after {
+    content: "";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;/*técnica específica para versões antigas do Internet Explorer (6 e 7, para ser exato) */
 }
 
 /*-------------------------------------- Footer----------------------------------*/
